# wiggle-camera

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/wiggle_camera/: camera.py  enhance.py  install.py  light.py  main.py  object_detection.py  timelapse.py  vision.py  write.py
src/wiggle_camera/service/: wiggle-camera-record-boot.sh  wiggle-camera-record.service  wiggle-record.service
